--- a/Quiz1/jtarazonaj_Quiz1.ipynb
+++ b/Quiz1/jtarazonaj_Quiz1.ipynb
@@ -25,6 +25,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Realizado por:\n",
+        "\n",
+        "*   Javier Andres Tarazona Jimenez (jtarazonaj@unal.edu.co)\n",
+        "\n",
+        "*   Esteban López Barreto (eslopezb@unal.edu.co)\n",
+        "\n",
+        "*   Kevin Shaiel Nivia Vargas (knivia@unal.edu.co)"
+      ],
+      "metadata": {
+        "id": "7cJ-CbvxeVXn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "This was created modifiying quizzes from the **[MLDS (Machine Learning and data Science](https://ingenieria.bogota.unal.edu.co/uec/?p=10947)** Training Program from \"Unidad de Ecucaciòn Continuada y Permanente\" of the \"Facultad de Ingeniería\" at UNAL\n",
         "\n",
         "<img src = \"https://i.ytimg.com/vi/S6xbNyvVyiY/maxresdefault.jpg\" alt = \"MLDS Header\" width = \"70%\">  </img>\n",
@@ -254,7 +269,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d71e6073-ea6a-48bf-a93a-bb2cc5913545"
+        "outputId": "fc967a32-965e-4603-8d18-47404b01594a"
       },
       "source": [
         "print(FizzBuzz(3))\n",
@@ -394,7 +409,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "83adecb1-f55f-4643-8ac3-bad98ffb691e"
+        "outputId": "afd973da-910b-4823-9e79-6ea7561af662"
       },
       "execution_count": null,
       "outputs": [
@@ -484,7 +499,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PZnHitR4lrMh",
-        "outputId": "c41d5b51-dc3c-4ded-8e79-87cc9d4e32c0"
+        "outputId": "f99680a7-5d14-4f33-9492-b397a094cd15"
       },
       "execution_count": null,
       "outputs": [
@@ -697,7 +712,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H8jtLvpMuvep",
-        "outputId": "b4886802-025e-42e9-94d9-d01b13ac09d5"
+        "outputId": "53d8164f-0630-4eb7-fd21-1f3fde477c5d"
       },
       "execution_count": null,
       "outputs": [
@@ -787,7 +802,7 @@
       "metadata": {
         "id": "thogtwflo6-x"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
