--- a/Quiz2/jtarazonaj_Quiz2.ipynb
+++ b/Quiz2/jtarazonaj_Quiz2.ipynb
@@ -24,6 +24,21 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Realizado por:\n",
+        "\n",
+        "*   Javier Andres Tarazona Jimenez (jtarazonaj@unal.edu.co)\n",
+        "\n",
+        "*   Esteban López Barreto (eslopezb@unal.edu.co)\n",
+        "\n",
+        "*   Kevin Shaiel Nivia Vargas (knivia@unal.edu.co)"
+      ],
+      "metadata": {
+        "id": "JIg0K4uZdFHx"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "22zXjFMRkUkJ"
       },
